# sparse-matrix-spreadsheet-cpp

./: CMakeLists.txt  README.md
docs/: complexity.md
include/: MainWindow.h  Node.h  SparseMatrix.h  formula.h  operations.h  sparseMatrix.h
src/: MainWindow.cpp  SparseMatrix.cpp  formula.cpp  main.cpp  operations.cpp  sparseMatrix.cpp  test_sparse.cpp
